Related to issue #7 + _slats reusable template (could be before or after .copy) + better vertical alignment of tags with flexbox (<3 flexbox) + adjust spacing of slats following copy + change sample resource to have meta slats after .copy + adjust order of some rules in _card to follow markup order (more logical in my mind)

--- a/_harp/css/_components/_card.scss
+++ b/_harp/css/_components/_card.scss
@@ -57,6 +57,22 @@ $card-border-radius: 4px;
     border-bottom: 1px solid palette(gray, light);    
   }
   
+  .tags, .byline {
+    margin-top: 8px;
+  }
+    
+  .byline {
+    @extend %inline-block;
+    @extend %copy-links;
+    @extend %text-size-s;
+  }
+  
+  // vertical-align: middle (see .tag) isn't really perfectly centered. This is.
+  .flexbox & .tags {
+    display: flex;
+    align-items: center;
+  }
+  
   > .footer {
     background-color: tint(palette(gray, x-light), 60%);
     border-radius: 0 0 $card-border-radius $card-border-radius;
@@ -69,15 +85,6 @@ $card-border-radius: 4px;
     .tags { margin-right: $card-padding-sides; }
   }
 
-  .tags, .byline {
-    margin-top: 8px;
-  }
-  
-  .byline {
-    @extend %inline-block;
-    @extend %copy-links;
-    @extend %text-size-s;
-  }
   
   &.primary {
     @include rem(margin-bottom, $font-size-l);
