--- a/_harp/css/oslc.css
+++ b/_harp/css/oslc.css
@@ -1366,6 +1366,19 @@ a.tag {
   padding: 0 16px;
   padding: 0 1rem;
   border-bottom: 1px solid #cccccc; }
+.card .tags, .card .byline {
+  margin-top: 8px; }
+.flexbox .card .tags {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 .card > .footer {
   background-color: #f7f7f7;
   border-radius: 0 0 4px 4px; }
@@ -1374,8 +1387,6 @@ a.tag {
     margin-bottom: 8px; }
   .card > .footer .tags {
     margin-right: 16px; }
-.card .tags, .card .byline {
-  margin-top: 8px; }
 .card.primary {
   margin-bottom: 19px;
   margin-bottom: 1.1875rem; }
@@ -1401,6 +1412,9 @@ a.tag {
 .slats {
   margin-bottom: 16px;
   margin-bottom: 1rem; }
+
+.copy + .slats {
+  margin-top: 11px; }
 
 .slat {
   padding: 8px 11px;
